plugins {
    id 'org.springframework.boot' version '2.4.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'org.geekhub'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'

    implementation 'com.zaxxer:HikariCP:4.0.1'
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testng:testng:7.3.0'
    testImplementation 'io.rest-assured:rest-assured:4.3.3'
    testImplementation 'org.assertj:assertj-core:3.19.0'


}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add("--enable-preview")
}
tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
tasks.withType(Test).configureEach {
    jvmArgs("--enable-preview")
}

test {
    useTestNG()
}
